--- a/index.qmd
+++ b/index.qmd
@@ -50,7 +50,7 @@ about:
 
 ## About Me
 
-I am a graduate student at **McGill University** and **Mila – Quebec's AI Institute**, pursuing an M.Sc. in Mathematics and Statistics under the supervision of [Prof. Eric Kolaczyk](https://mila.quebec/en/directory/eric-kolaczyk). My research focuses on **graph-embedded random forests** and **graph representation learning** for interpretable molecular property prediction in low-data regimes.
+I am a graduate student at **McGill University** and **Mila – Quebec AI Institute**, pursuing an M.Sc. in Mathematics and Statistics under the supervision of [Prof. Eric Kolaczyk](https://mila.quebec/en/directory/eric-kolaczyk). My research focuses on **graph-embedded random forests** and **graph representation learning** for interpretable molecular property prediction in low-data regimes.
 
 I earned my B.Sc. in Physics and Applied Mathematics from **Bowling Green State University** in 2023, graduating *Summa Cum Laude* while competing on the NCAA Division I Men’s Soccer team. During my undergraduate studies, I worked in the **Zamkov Lab**, researching colloidal quantum dots for photovoltaic applications, and in the **Nardone Research Group**, where I simulated and investigated photovoltaic devices.
 
