--- a/index.qmd
+++ b/index.qmd
@@ -50,12 +50,12 @@ about:
 
 ## About Me
 
-I am a graduate student at **McGill University** and **Mila – Quebec AI Institute**, pursuing an M.Sc. in Mathematics and Statistics under the supervision of [Prof. Eric Kolaczyk](https://mila.quebec/en/directory/eric-kolaczyk). My research focuses on **graph-embedded random forests** and **graph representation learning** for interpretable molecular property prediction in low-data regimes.
+I am a graduate student at McGill University and Mila – Quebec AI Institute, pursuing an M.Sc. in Mathematics and Statistics under the supervision of [Prof. Eric Kolaczyk](https://sites.bu.edu/kolaczyk/). My research focuses on graph-embedded random forests and graph representation learning for interpretable molecular property prediction in low-data regimes.
 
-I earned my B.Sc. in Physics and Applied Mathematics from **Bowling Green State University** in 2023, graduating *Summa Cum Laude* while competing on the NCAA Division I Men’s Soccer team. During my undergraduate studies, I worked in the **Zamkov Lab**, researching colloidal quantum dots for photovoltaic applications, and in the **Nardone Research Group**, where I simulated and investigated photovoltaic devices.
+I earned my B.Sc. in Physics and Applied Mathematics from Bowling Green State University in 2023, graduating *Summa Cum Laude* while competing on the NCAA Division I Men’s Soccer team. During my undergraduate studies, I worked in the Zamkov Lab, researching colloidal quantum dots for photovoltaic applications, and in the Nardone Research Group, where I simulated and investigated photovoltaic devices.
 
-Most recently, I worked as a **data scientist** at South Essex Fabricating’s Research and Development Division, where I developed machine learning models for crop yield forecasting and built computer vision systems for automated crop sampling.
+Most recently, I worked as a data scientist at South Essex Fabricating’s Research and Development Division, where I developed machine learning models for crop yield forecasting and built computer vision systems for automated crop sampling.
 
-In the Summer of 2025, I'll be joining **Morgan Stanley** in Montreal as a **Fixed Income Strats Associate** in the Quantitative Finance Division.
+In the Summer of 2025, I'll be joining Morgan Stanley in Montreal as a Fixed Income Strats Associate in the Quantitative Finance Division.
 
 [View my CV as PDF](./files/MichaelMontemurri-CV.pdf)
